comrade-chatgpt-bot-main/telegram_bot/service_telegram_bot.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegram-service
  namespace: comrade-ho-chi-minh
spec:
  selector:
    app.kubernetes.io/name: telegram-bot
  ports:
    - port: 5000
      targetPort: healthcheck
  type: ClusterIP
