comrade-chatgpt-bot-main/telegram_bot/ingress_telegram_bot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telegramm-bot-ingress
  namespace: comrade-ho-chi-minh
  annotations:
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: user-manager-auth-secret
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: webhook.comrade-ho-chi-minh.space
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: telegram-service
            port:
              number: 5000
  tls:
  - hosts:
    - webhook.comrade-ho-chi-minh.space
    secretName: teleggram-bot-nikita-tls
